@@ -127,6 +127,8 @@ Other Changes
 Build
 ----------------------
  1. SOLR-776: Added in ability to sign artifacts via Ant for releases (gsingers)
+
+ 2. SOLR-854: Added run-example target (Mark Miller vie ehatcher)
  
 
 Documentation
